# grab-bazel-common

./: .bazelrc  .gitignore  BUILD.bazel  CODEOWNERS  MODULE.bazel  README.md  WORKSPACE  bazel_common_maven_install.json  bazel_common_test_maven_install.json  maven_install.json  workspace_defs.bzl
.github/actions/bazel/: action.yml
.github/workflows/: ci.yml
android/: BUILD.bazel  initialize.bzl  repositories.bzl
android/test/: BUILD.bazel
android/tools/: BUILD.bazel
patches/: BUILD.bazel
patches/jetifier/: BUILD.bazel  BUILD.jetifier
patches/rules_android/: BUILD.bazel  allow_resource_conflicts.patch  android_resource_processor_bazel_paths.patch  databinding_absolute_paths.patch  databinding_androidx_flag.patch  databinding_annotation_template.patch  databinding_deps.patch  databinding_ouput_dash  databinding_prefixes.patch  databinding_processor_absolute_path.patch  guava_version.patch  macos_cp_reflink.patch
patches/rules_jvm_external/: BUILD.bazel  jetifier.patch
rules/: BUILD.bazel  defs.bzl  deps_init.bzl  maven.bzl  prereqs.bzl  repositories.bzl  setup.bzl  setup_android.bzl
rules/android/: BUILD.bazel  android_binary.bzl  android_instrumentation.bzl  android_library.bzl  lint.bzl  lint2.bzl  resources.bzl  test.bzl  utils.bzl
rules/android/compose/: BUILD.bazel
rules/android/lint/: collect_aar_aspect.bzl  defs.bzl  lint.bzl  lint_aspect.bzl  lint_inspect.bzl  lint_sources.bzl  lint_update_baseline.bzl  providers.bzl  utils.bzl
rules/android/private/: resource_merger.bzl
rules/check/detekt/: defs.bzl
rules/dagger/: dagger.bzl
rules/kotlin/: BUILD.bazel  kotlin.bzl  test.bzl
rules/test/: setup.bzl
src/main/proto/: BUILD.bazel
tests/: BUILD.bazel
tests/android/binary/: BUILD.bazel  lint_baseline.xml
tests/android/binary/src/main/: AndroidManifest.xml
tests/android/binary/src/main/java/com/grab/test/: TestActivity.kt
tests/android/binary/src/main/java/com/grab/test/di/: SimpleDependency.kt  TestActivityComponent.kt
tests/android/binary/src/main/res/layout/: layout_test.xml
toolchains/: BUILD.bazel  toolchains.bzl
tools/aapt_lite/: BUILD
tools/aapt_lite/src/main/java/com/grab/aapt/: AaptLiteCommand.kt  AaptLiteComponent.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/binding/: BindingClassModule.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/binding/generator/: BindingClassGenerator.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/binding/parser/: LayoutBindingsParser.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/binding/store/: BindingClassJsonParser.kt  LayoutTypeStore.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/brclass/: BrClassGenerator.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/common/: SrcJarPackager.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/mapper/: MapperComponent.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/rclass/: ResToRClassModule.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/rclass/generator/: RClassGenerator.kt  ResToRClassGenerator.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/rclass/parser/: RTxtParser.kt  ResToRParser.kt  ResourceFileParser.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/util/: Utils.kt  XmlEntry.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/util/jars/: SrcJarPackager.kt
tools/aapt_lite/src/test/java/com/grab/aapt/databinding/binding/: DefaultLayoutBindingsParserTest.kt
tools/aapt_lite/src/test/java/com/grab/aapt/databinding/binding/generator/: DefaultBindingClassGeneratorTest.kt
tools/aapt_lite/src/test/java/com/grab/aapt/databinding/brclass/: DefaultBrClassGeneratorTest.kt
tools/aapt_lite/src/test/java/com/grab/aapt/databinding/common/: TestUtil.kt
tools/aapt_lite/src/test/java/com/grab/aapt/databinding/rclass/parser/: DefaultRTxtParserTest.kt
tools/aapt_lite/src/test/java/com/grab/aapt/databinding/rclass/xml/: ArrayParserTest.kt  DeclareStyleableParserTest.kt  DefaultXmlParserTest.kt  IDParserTest.kt  StyleParserTest.kt
tools/android/: BUILD.bazel
tools/android-mock/: BUILD.bazel
tools/android_mock/: andorid_mock.bzl
tools/bazel_lib/: BUILD.bazel
tools/binding-adapter-bridge/: BUILD.bazel
tools/build_config/: BUILD  build_config.bzl
tools/build_config/src/main/java/com/grab/buildconfig/: BuildConfigGenerator.kt  GeneratorCommand.kt  main.kt
tools/build_config/src/test/java/com/grab/buildconfig/: BuildConfigTest.kt
tools/buildifier/: BUILD.bazel  defs.bzl  repository.bzl  rules.bzl  toolchain.bzl
tools/custom_res/: BUILD.bazel
tools/databinding/: BUILD.bazel  databinding.bzl  databinding_mapper.bzl  databinding_stubs.bzl
tools/db-compiler-lite/: BUILD
tools/db-compiler-lite/src/main/java/com/grab/databinding/stub/: BindingStubCommand.kt  BindingsStubComponent.kt  main.kt
tools/db-compiler-lite/src/main/java/com/grab/databinding/stub/binding/parser/: LayoutBindingsParser.kt
tools/db-compiler-lite/src/main/java/com/grab/databinding/stub/binding/store/: LayoutTypeStore.kt
tools/db-compiler-lite/src/main/java/com/grab/databinding/stub/common/: Constants.kt  SrcJarPackager.kt  XmlEntry.kt
tools/java/: BUILD.bazel
tools/kotlin/: android.bzl
tools/lint/src/main/java/com/grab/lint/: LintAnalyzeCommand.kt  LintBaseCommand.kt  LintBaseline.kt  LintCommand.kt  LintModelCreator.kt  LintReportCommand.kt  LintResults.kt  Main.kt  ProjectXmlCreator.kt  Sanitizer.kt  WorkingDirectory.kt
tools/lint/src/test/java/com/grab/lint/: LintAnalyzeCommandTest.kt  LintBaselineSanitizerTest.kt  LintModelCreatorTest.kt
tools/maven/: BUILD.bazel
tools/parcelize/: parcelize.bzl
tools/res_value/: res_value.bzl
tools/test/: BUILD.bazel  test.bzl
tools/test-suite/: BUILD.bazel
tools/test-suite-generator/: BUILD.bazel
tools/test-suite/src/main/java/com/grab/test/: Classpath.kt  TestSuiteBuilder.kt
tools/worker/: BUILD.bazel
tools/worker/src/main/kotlin/io/bazel/streams/: WorkerStreams.kt
tools/worker/src/main/kotlin/io/bazel/value/: WorkRequest.kt  WorkResponse.kt
(+15 files in other folders)
