module(name = "grab_bazel_common")

bazel_dep(name = "rules_android", version = "0.6.3")
bazel_dep(name = "rules_detekt", version = "0.8.1.2")
bazel_dep(name = "rules_java", version = "8.6.0")
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "rules_kotlin", version = "1.9.6")

archive_override(
    module_name = "rules_detekt",
    integrity = "sha256-6teP/gTuoEYMw44fVkmzgvY7NQW5AF5RyZPirhNETX8=",
    strip_prefix = "bazel_rules_detekt-d67376eb93ad42b252e7495f9316a8311991ffaf",
    urls = ["https://github.com/buildfoundation/bazel_rules_detekt/archive/d67376eb93ad42b252e7495f9316a8311991ffaf.zip"],
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")


remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")


DAGGER_TAG = "2.46.1"
http_archive(
    name = "bazel_common_dagger",
    sha256 = "bbd75275faa3186ebaa08e6779dc5410741a940146d43ef532306eb2682c13f7",
    strip_prefix = "dagger-dagger-%s" % DAGGER_TAG,
    url = "https://github.com/google/dagger/archive/dagger-%s.zip" % DAGGER_TAG,
)

DAGGER_ARTIFACTS = [
    "com.google.dagger:dagger:" + DAGGER_TAG,
    "com.google.dagger:dagger-compiler:" + DAGGER_TAG,
    "com.google.dagger:dagger-producers:" + DAGGER_TAG,
    "com.google.dagger:dagger-spi:" + DAGGER_TAG,
]

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "bazel_common_maven",
    artifacts = DAGGER_ARTIFACTS + [
        "androidx.databinding:databinding-adapters:7.1.2",
        "androidx.databinding:databinding-common:7.1.2",
        "androidx.databinding:databinding-compiler:7.1.2",
        "androidx.databinding:databinding-ktx:7.1.2",
        "androidx.databinding:databinding-runtime:7.1.2",
        "com.android.tools.lint:lint-api:31.5.0-alpha02",
        "com.android.tools.lint:lint-checks:31.5.0-alpha02",
        "com.android.tools.lint:lint:31.5.0-alpha02",
        "com.github.ajalt:clikt:2.8.0",
        "com.github.tschuchortdev:kotlin-compile-testing:1.5.0",
        "com.google.android.material:material:1.2.1",
        "com.google.auto.service:auto-service:1.0-rc6",
        "com.google.auto:auto-common:0.10",
        "com.google.guava:guava:29.0-jre",
        "com.google.protobuf:protobuf-java-util:3.6.0",
        "com.google.protobuf:protobuf-java:3.6.0",
        "com.squareup:kotlinpoet-jvm:1.15.2",
        "com.squareup:kotlinpoet-ksp:1.15.2",
        "com.squareup.moshi:moshi-kotlin:1.15.2",
        "com.squareup.moshi:moshi-kotlin-codegen:1.15.2",
        "com.squareup.moshi:moshi:1.15.2",
        "com.squareup.okio:okio-jvm:3.2.0",
        "com.squareup:javapoet:1.13.0",
        "io.reactivex.rxjava3:rxjava:3.0.12",
        "javax.inject:javax.inject:1",
        "junit:junit:4.13",
        "net.sf.kxml:kxml2:2.3.0",
        "org.jetbrains.kotlin:kotlin-parcelize-compiler:2.1.0",
        "org.jetbrains.kotlin:kotlin-parcelize-runtime:2.1.0",
        "org.jetbrains.kotlin:kotlin-stdlib:2.1.0",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4",
        "org.json:json:20210307",
        "org.ow2.asm:asm-tree:6.0",
        "org.ow2.asm:asm:6.0",
        "xmlpull:xmlpull:1.1.3.1",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
        "https://oss.sonatype.org/content/repositories/snapshots",
    ],
    lock_file = "//:bazel_common_maven_install.json",
    strict_visibility = True,
    resolve_timeout = 3500,
    fetch_sources = True,
)

use_repo(maven, "bazel_common_maven")
