java_import(
    name = "android_tools",
    jars = ["@android_tools//:all_android_tools_deploy.jar"],
    visibility = ["//visibility:public"],
)

java_plugin(
    name = "compiler_annotation_processor",
    generates_api = False,
    processor_class = "android.databinding.annotationprocessor.ProcessDataBinding",
    visibility = ["//visibility:public"],
    deps = [
        ":android_tools",
    ],
)

java_import(
    name = "android_sdk",
    jars = ["@androidsdk//:platforms/android-36/android.jar"],
    neverlink = 1,
    visibility = ["//visibility:public"],
)
