load("@grab_bazel_common//rules:defs.bzl", "kotlin_library", "kt_compiler_plugin")

kt_compiler_plugin(
    name = "compose-compiler-plugin",
    id = "org.jetbrains.kotlin.compose",
    options = {
        "experimentalStrongSkipping": "true",
    },
    target_embedded_compiler = True,
    deps = [
        "@maven//:org_jetbrains_kotlin_kotlin_compose_compiler_plugin_embeddable",
    ],
)

kotlin_library(
    name = "compose-plugin",
    exported_compiler_plugins = [":compose-compiler-plugin"],
    visibility = ["//visibility:public"],
)
